--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -34,5 +34,12 @@
   });
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-3805144493754901",
+        enable_page_level_ads: true
+    });
+</script>
 
 <!-- end custom head snippets -->
