--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,5 +21,18 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
+
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- akevinlee.github.io -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-3805144493754901"
+         data-ad-slot="8061707754"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
   </div>
 {% endif %}
