--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,3 +19,11 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-3805144493754901",
+        enable_page_level_ads: true
+    });
+</script>
